--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Lao+Looped&family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,9 +10,10 @@ body {
 }
 
 /* .animate__animated */
-.animate__fadeIn{
+.animate__fadeIn {
   /* --animate-duration: 0.5s; */
 }
+
 .animate__fadeOut {
   --animate-duration: 1s;
 }
@@ -41,25 +41,43 @@ body {
   background: #555;
 }
 
-a,h1,h2,h3,h4,h5,h6,p,span,div,li,ul,strong{
+a,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+div,
+li,
+ul,
+strong {
   @apply text-[#ffffffcc];
   font-family: "Noto Sans TC", sans-serif;
 }
-h1{
+
+h1 {
   @apply text-3xl font-semibold lg:text-4xl;
 }
-h2{
+
+h2 {
   @apply text-xl font-medium lg:text-2xl;
 }
-h4{
+
+h4 {
   @apply text-sm font-semibold
 }
-p{
+
+p {
   @apply text-base font-medium text-[#959595];
 }
-strong{
+
+strong {
   @apply text-2xl font-semibold;
 }
-button{
+
+button {
   @apply bg-spline-button p-2 px-6 rounded-full font-semibold text-sm
 }
